--- a/src/theme/colors.css
+++ b/src/theme/colors.css
@@ -1,16 +1,16 @@
 :root {
-  --color-page-background: white;
+  --color-page-background: #ebebeb;
   --color-on-page-background: black;
   --text-on-page-background: black;
 
   --color-one: hsla(200, 15%, 20%, 0.85);
-  --color-two: #DBAD8D;
+  --color-two: #004e98;
   --color-three: #fff3e8;
-  --color-four: hsla(200, 15%, 20%, 0.85);
-  --color-five: #ECDBCC;
+  --color-four: #C0C0C0;
+  --color-five: #ff6700;
 
   --text-on-color-one: white;
-  --text-on-color-two: black;
+  --text-on-color-two: white;
   --text-on-color-three: black;
   --text-on-color-four: black;
 }
