--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,9 @@
   text-align: center;
   background-color: var(--color-page-background);
   color: var(--text-on-page-background);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 a {
