--- a/src/components/content/logo-title/LogoTitle.module.css
+++ b/src/components/content/logo-title/LogoTitle.module.css
@@ -1,4 +1,18 @@
 .logo {
-  width: 200px;
-  height: 150px;
+  width: 90%;
+  max-width: 50vw;
+  height: auto;
+  
+  padding: 1em;
+  margin: auto;
+  background-color: white;
+
+  border: 2px solid var(--color-one);
+  border-radius: 0.25em;
+  border-style: solid;
+}
+
+.titleSection {
+  padding: 0.25em;
+  text-align: start;
 }
