Add SectionTitle component and change the app to align start default

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: start;
   background-color: var(--color-page-background);
   color: var(--text-on-page-background);
   min-height: 100vh;
