--- a/src/components/content/logo-title/LogoTitle.module.css
+++ b/src/components/content/logo-title/LogoTitle.module.css
@@ -5,7 +5,7 @@
   
   display: block;
   padding: 1em;
-  margin: auto;
+  margin: 0 auto 0.5em auto;
   background-color: white;
 
   border: 2px solid var(--color-one);
