--- a/src/theme/colors.css
+++ b/src/theme/colors.css
@@ -1,16 +1,16 @@
 :root {
-  --color-page-background: #ebebeb;
-  --color-on-page-background: black;
-  --text-on-page-background: black;
+  --color-page-background: #EDF5FC;
+  --color-on-page-background: #21C063;
+  --text-on-page-background: #161612;
 
   --color-one: hsla(200, 15%, 20%, 0.85);
-  --color-two: #004e98;
+  --color-two: #EDF5FC;
   /* --color-three: #fff3e8; */
-  --color-four: #C0C0C0;
+  --color-four: #EDF5FC;
   --color-five: #ff6700;
 
   --text-on-color-one: white;
-  --text-on-color-two: white;
+  --text-on-color-two: #126936;
   /* --text-on-color-three: black; */
   --text-on-color-four: black;
 }
