--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -1,5 +1,43 @@
+.container-page-width {
+  width: 100%;
+  padding-left: 2em;
+  padding-right: 2em;
+  max-width: var(--body-max-width);
+}
+
+.vertical-center {
+  height: calc(100vh - 4em);
+  max-height: 125vw;
+}
+
+.vertical-center > * {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+/* If an element is desired to lay at the bottom of a vertically centered section, this class is utilized on that element */
+.vertical-center > .floor {
+  margin-bottom: 0;
+}
+
+@media (min-width: 768px) {
+  .vertical-center {
+    max-height: 75vw;
+  }
+}
+
 .carousel-large {
   width: 65%;
+  margin: auto;
+
+  overflow: hidden;
+  border: 2px solid var(--color-one);
+  border-radius: 0.25em;
+  border-style: solid;
+}
+
+.carousel-aside {
+  width: 100%;
   margin: auto;
 
   overflow: hidden;
