Generalize JobExperience component into ExperienceSummary component for both projects and job positions; use the new component to add Sprout to Projects page

--- a/src/components/content/logo-title/LogoTitle.module.css
+++ b/src/components/content/logo-title/LogoTitle.module.css
@@ -21,3 +21,9 @@
   padding: 0.25em;
   text-align: start;
 }
+
+.titleSection a {
+  font-weight: 600;
+  color: var(--text-accent-color);
+  text-decoration: none;
+}
