--- a/src/theme/colors.css
+++ b/src/theme/colors.css
@@ -13,4 +13,5 @@
   --text-on-color-two: #126936;
   /* --text-on-color-three: black; */
   --text-on-color-four: black;
+  --text-accent-color: #C7434E;
 }
