Make logo height better match summary content height for LogoTitle

--- a/src/components/content/logo-title/LogoTitle.module.css
+++ b/src/components/content/logo-title/LogoTitle.module.css
@@ -3,8 +3,7 @@
 }
 
 .logoWrapper {
-  width: 90%;
-  max-width: 50vw;
+  height: 8em;
   aspect-ratio: 4 / 3;
   padding: 1em;
   margin: 0 auto 0.5em auto;
@@ -16,8 +15,8 @@
 }
 
 .logoWrapper * {
+  height: 100%;
   width: 100%;
-  aspect-ratio: inherit;
 }
 
 .titleSection {
