--- a/src/components/content/icon-button/IconButton.module.css
+++ b/src/components/content/icon-button/IconButton.module.css
@@ -4,7 +4,7 @@
   
   padding: 0.25em 0.5em;
   
-  border-style: none;
+  border: none;
   border-radius: 0.5em;
   
   margin: 0 0.5em 0.5em 0.5em;
@@ -14,11 +14,15 @@
   background-color: black;
 }
 
+.purple.button {
+  background-color: #4b2e83;
+}
+
 .accent.button {
   background-color: var(--color-accent-two);
 }
 
 .icon {
-  height: 100%;
+  height: 98%;
   aspect-ratio: 1 / 1;
 }
