--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -15,7 +15,7 @@
   margin-bottom: auto;
 }
 
-/* If an element is desired to lay at the bottom of a vertically centered section, this class is utilized on that element */
+/* If an element is desired to lay at the bottom of a vertically centered section, the .floor class is utilized on that element */
 .vertical-center > .floor {
   margin-bottom: 0;
 }
@@ -44,4 +44,12 @@
   border: 2px solid var(--color-one);
   border-radius: 0.25em;
   border-style: solid;
+}
+
+img.wide {
+  width: 100%;
+  /* min-width: 500px;
+  max-width: 100vw; */
+  height: 400px;
+  object-fit: cover;
 }
